<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearSplash"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageSplash"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/voluntades_logo"/>

    <TextView
        android:id="@+id/textSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:text="@string/splash_title"/>

    <EditText
        android:id="@+id/txtCode"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_edt"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:hint="@string/hint_code"/>

    <Button
        android:id="@+id/btnCode"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/splash_submit"/>

</LinearLayout>